# Klarova

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/decisions/: README.md  template.md
src/klarova/: __init__.py
tests/: test_smoke.py
