[project]
name = "klarova"
version = "0.1.0"
description = "A governed context layer for a company's internal data, plus a copilot built on it."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Son Dang Dinh", email = "samson.ailabs@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1,<2",
    "langgraph>=1,<2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
klarova = "klarova:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D", "TID", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
